--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
 
     <section id="dienste">
-      <h2>Dienstleistungen</h2>
+      <h2>DienstleistungenS</h2>
     </section>
 
     <script src="/node_modules/typed.js/lib/typed.js"></script>
