changed typed js cdn

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     </section>
 
     <section id="dienste">
-      <h2>DienstleistungenS</h2>
+      <h2>Dienstleistungen</h2>
     </section>
 
-    <script src="/node_modules/typed.js/lib/typed.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
     <script src="/js/main.js"> </script>
   </body>
 </html>
