created menuBtn and made design responsive

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <a href="">Über mich</a>
           <a href="">Kontakt</a>
         </div>
+        <img class="menuBtn" src="/assets/menu.svg" alt="Menu Button">
       </div>
 
       <div class="heroContent">
