changed language to spanish

--- a/index.html
+++ b/index.html
@@ -5,34 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Anna Gimona Languages - Übersetzerin & Dolmetscherin</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Pacifico&amp;subset=latin-ext" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:300,500"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Pacifico&amp;subset=latin-ext"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section id="heroSection">
       <div class="overlay"></div>
       <div class="navBar">
-        <h1>Anna Gimona</h1>
+        <h1>Anna Gimona Languages</h1>
         <div class="navWrapper">
-          <a href="">Dienstleistungen</a>
-          <a href="">Über mich</a>
-          <a href="">Kontakt</a>
+          <a href="">servicios</a>
+          <a href="">sobre mí</a>
+          <a href="">contacto</a>
+          <a href=""
+            ><img
+              class="languageChange"
+              src="/assets/translation.svg"
+              alt="Langauge Button"
+          /></a>
         </div>
-        <img class="menuBtn" src="/assets/menu.svg" alt="Menu Button">
+        <img class="menuBtn" src="/assets/menu.svg" alt="Menu Button" />
       </div>
 
       <div class="heroContent">
         <div><span class="slogan" id="typed"></span></div>
-        <h2 class="heroTitle">Übersetzerin & Dolmetscherin</h2>
+        <h2 class="heroTitle">Intérprete y Traductora</h2>
+        <h3>Alemán, Inglés, Español</h3>
       </div>
     </section>
 
     <section id="dienste">
-      <h2>Dienstleistungen</h2>
+      <h2>servicios</h2>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
-    <script src="/js/main.js"> </script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
