added dienste section

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Anna Gimona Languages - Übersetzerin & Dolmetscherin</title>
+    <title>Anna Gimona Languages - Intérprete y Traductora</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:300,500"
@@ -43,6 +43,72 @@
 
     <section id="dienste">
       <h2>servicios</h2>
+      <div class="diensteWrapper">
+        <img src="/assets/translator.svg" alt="Interpretación" />
+        <div>
+          <h3>Interpretación</h3>
+          <p>
+            Se denomina como interpretación la traducción oral de un discurso de
+            un idioma a otro. Se distingue entre la interpretación simultánea,
+            en la cual la traducción oral se ejecuta de manera instantánea
+            (conocida por imágenes y videos de la Unión Europea o la ONU), y la
+            interpretación consecutiva que se lleva a cabo cuando el discurso
+            haya terminado (a través de apuntes por parte de la intérprete). El
+            término “traducción simultánea” es frecuente, aunque el término
+            correcto es “interpretación simultánea”, ya que la traducción
+            solamente se realiza de forma escrita. Soy intérprete de
+            conferencias y de enlace egresada de la Universidad de Viena,
+            Austria y trabajo con los idiomas alemán, inglés y español. No dude
+            en ponerse en contacto conmigo y juntos encontraremos la solución
+            perfectamente adecuada para su evento. Trabajo en grandes
+            conferencias y reuniones internacionales, en visitas guiadas en
+            terreno o plantas, como también en reuniones pequeñas y
+            conversaciones bilingües.
+          </p>
+        </div>
+      </div>
+      <div class="diensteWrapper">
+        <img src="/assets/language.svg" alt="Interpretación" />
+        <div>
+          <h3>Traducción</h3>
+          <p>
+            Traducir significa traspasar una oración escrita de un idioma a
+            otro, siempre tomando en cuenta los puntos de vista culturales y
+            lingüísticos. Ofrezco traducciones profesionales para los ámbitos de
+            medicina, economía, marketing, derecho, cultura y mucho más.
+            Asimismo, me dedico a la traducción literaria. Además, hago
+            traducciones de documentos para viajes o estadías en el extranjero.
+            Para la elaboración de una propuesta o cotización es imprescindible
+            analizar el documento a traducir, el cual Ud. puede enviar a mi
+            correo electrónico. Por supuesto sus documentos se consideran
+            estrictamente confidenciales.
+          </p>
+        </div>
+      </div>
+      <div class="diensteWrapper">
+        <img src="/assets/study.svg" alt="Interpretación" />
+        <div>
+          <h3>Corrección de Textos</h3>
+          <p>
+            Entre otros, realizo correcciones de textos, trabajos científicos,
+            papers, textos publicitarios y páginas web. ¡Asegúrese de publicar
+            un texto sin errores!
+          </p>
+        </div>
+      </div>
+      <div class="diensteWrapper">
+        <img src="/assets/online-class.svg" alt="Interpretación" />
+        <div>
+          <h3>Clases de idiomas</h3>
+          <p>
+            Ofrezco clases de inglés y alemán para empresas, instituciones,
+            profesionales, estudiantes y alumnos. Las clases son flexibles,
+            diversas y se orientan en las necesidades y metas del alumno. Mis
+            clientes son desde niños de pre-kinder hasta profesionales de
+            grandes empresas.
+          </p>
+        </div>
+      </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
