spanish version done

--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
             en la cual la traducción oral se ejecuta de manera instantánea
             (conocida por imágenes y videos de la Unión Europea o la ONU), y la
             interpretación consecutiva que se lleva a cabo cuando el discurso
-            haya terminado (a través de apuntes por parte de la intérprete). El
-            término “traducción simultánea” es frecuente, aunque el término
+            haya terminado (a través de apuntes por parte de la intérprete).
+            <br />
+            El término “traducción simultánea” es frecuente, aunque el término
             correcto es “interpretación simultánea”, ya que la traducción
             solamente se realiza de forma escrita. Soy intérprete de
             conferencias y de enlace egresada de la Universidad de Viena,
-            Austria y trabajo con los idiomas alemán, inglés y español. No dude
-            en ponerse en contacto conmigo y juntos encontraremos la solución
-            perfectamente adecuada para su evento. Trabajo en grandes
+            Austria y trabajo con los idiomas alemán, inglés y español. <br />
+            No dude en ponerse en contacto conmigo y juntos encontraremos la
+            solución perfectamente adecuada para su evento. Trabajo en grandes
             conferencias y reuniones internacionales, en visitas guiadas en
             terreno o plantas, como también en reuniones pequeñas y
             conversaciones bilingües.
@@ -110,6 +111,45 @@
         </div>
       </div>
     </section>
+    <section id="about">
+      <div class="container">
+        <h2>sobre mí</h2>
+        <img src="/assets/profil.jpg" alt="Anna Gimona" />
+        <p>
+          Soy traductora e intérprete austríaca egresada de la Universidad de
+          Viena, Austria y vivo en Chile desde el 2018. Terminé dos carreras en
+          la Facultad de Ciencias de Traducción de la Universidad de Viena,
+          primero el Bachelor of Arts en Comunicación Transcultural y luego el
+          Master of Arts en Traducción e Interpretación con los idiomas alemán,
+          español e inglés.<br /><br />
+          Desde la titulación trabajo como traductora e intérprete freelance y
+          además como profesora de lenguas. Ofrezco traducciones para Europa y
+          América del Sur y encargos de interpretación en todo Chile. El
+          internet y la conectividad nos permiten trabajar de manera eficiente y
+          rápida en todo el mundo. <br /><br />Mi carrera es mi pasión, soy una
+          amante de los idiomas y meticulosa al trabajar con estos. Trabajo de
+          manera muy eficiente, responsable y puntual. Para mí, las metas del
+          cliente van primero. ¡No se va a arrepentir de encargar trabajos
+          conmigo!
+        </p>
+      </div>
+    </section>
+    <section id="contact">
+      <div class="container">
+        <h2>contacto</h2>
+        <h3>Anna Gimona</h3>
+        <a href="mailto:annagimona@gmail.com">annagimona@gmail.com</a>
+        <p>
+          Para consultas, cotizaciones y más información no dude en contactarme.
+        </p>
+      </div>
+    </section>
+    <div class="footer">
+      <a href="">pie de imprenta</a>
+      <a href="">LinkedIn</a>
+      <a href="">Instagram</a>
+      <a href="">Facebook</a>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
     <script src="/js/main.js"></script>
