--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Anna Gimona Languages - Intérprete y Traductora</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:300,500"
       rel="stylesheet"
@@ -58,11 +58,11 @@
           <a href=""
             ><img
               class="languageChange"
-              src="/assets/translation.svg"
+              src="./assets/translation.svg"
               alt="Langauge Button"
           /></a>
         </div>
-        <img class="menuBtn" src="/assets/menu.svg" alt="Menu Button" />
+        <img class="menuBtn" src="./assets/menu.svg" alt="Menu Button" />
       </div>
 
       <div class="heroContent">
@@ -75,7 +75,7 @@
     <section id="dienste">
       <h2>servicios</h2>
       <div class="diensteWrapper">
-        <img src="/assets/translator.svg" alt="Interpretación" />
+        <img src="./assets/translator.svg" alt="Interpretación" />
         <div>
           <h3>Interpretación</h3>
           <p>
@@ -100,7 +100,7 @@
         </div>
       </div>
       <div class="diensteWrapper">
-        <img src="/assets/language.svg" alt="Interpretación" />
+        <img src="./assets/language.svg" alt="Interpretación" />
         <div>
           <h3>Traducción</h3>
           <p>
@@ -118,7 +118,7 @@
         </div>
       </div>
       <div class="diensteWrapper">
-        <img src="/assets/study.svg" alt="Interpretación" />
+        <img src="./assets/study.svg" alt="Interpretación" />
         <div>
           <h3>Corrección de Textos</h3>
           <p>
@@ -129,7 +129,7 @@
         </div>
       </div>
       <div class="diensteWrapper">
-        <img src="/assets/online-class.svg" alt="Interpretación" />
+        <img src="./assets/online-class.svg" alt="Interpretación" />
         <div>
           <h3>Clases de idiomas</h3>
           <p>
@@ -145,7 +145,7 @@
     <section id="about">
       <div class="container">
         <h2>sobre mí</h2>
-        <img src="/assets/profil.jpg" alt="Anna Gimona" />
+        <img src="./assets/profil.jpg" alt="Anna Gimona" />
         <p>
           Soy traductora e intérprete austríaca egresada de la Universidad de
           Viena, Austria y vivo en Chile desde el 2018. Terminé dos carreras en
@@ -183,6 +183,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
