mobile menu implemented

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       <div class="navBar">
         <h1>Anna Gimona Languages</h1>
         <div class="navWrapper">
-          <a href="">servicios</a>
-          <a href="">sobre mí</a>
-          <a href="">contacto</a>
-          <a href=""
+          <a href="#dienste">servicios</a>
+          <a href="#about">sobre mí</a>
+          <a href="#contact">contacto</a>
+          <a href="" id="languageBtn"
             ><img
               class="languageChange"
               src="./assets/translation.svg"
@@ -64,7 +64,14 @@
         </div>
         <img class="menuBtn" src="./assets/menu.svg" alt="Menu Button" />
       </div>
-
+      <div class="mobileMenu">
+        <img class="closeBtn" src="./assets/close.svg" alt="">
+        <div>
+            <a class="navLink" href="#dienste">servicios</a>
+            <a class="navLink" href="#about">sobre mí</a>
+            <a class="navLink" href="#contact">contacto</a>
+        </div>
+      </div>
       <div class="heroContent">
         <div><span class="slogan" id="typed"></span></div>
         <h2 class="heroTitle">Intérprete y Traductora</h2>
