--- a/english.html
+++ b/english.html
@@ -65,6 +65,20 @@
         <img class="menuBtn" src="./assets/menu.svg" alt="Menu Button" />
       </div>
 
+      <div class="mobileMenu">
+        <img class="closeBtn" src="./assets/close.svg" alt="" />
+        <div>
+          <a class="navLink" href="#dienste">Services</a>
+          <a class="navLink" href="#about">About me</a>
+          <a class="navLink" href="#contact">Contact</a>
+          <div class="languages">
+            <a href="./deutsch.html">Deutsch</a>
+            <a href="./english.html">English</a>
+            <a href="./index.html">Español</a>
+          </div>
+        </div>
+      </div>
+
       <div class="heroContent">
         <div><span class="slogan" id="typed"></span></div>
         <h2 class="heroTitle">Translator and Interpreter</h2>
