--- a/index.html
+++ b/index.html
@@ -65,11 +65,16 @@
         <img class="menuBtn" src="./assets/menu.svg" alt="Menu Button" />
       </div>
       <div class="mobileMenu">
-        <img class="closeBtn" src="./assets/close.svg" alt="">
+        <img class="closeBtn" src="./assets/close.svg" alt="" />
         <div>
-            <a class="navLink" href="#dienste">servicios</a>
-            <a class="navLink" href="#about">sobre mí</a>
-            <a class="navLink" href="#contact">contacto</a>
+          <a class="navLink" href="#dienste">servicios</a>
+          <a class="navLink" href="#about">sobre mí</a>
+          <a class="navLink" href="#contact">contacto</a>
+          <div class="languages">
+            <a href="./deutsch.html">Deutsch</a>
+            <a href="./english.html">English</a>
+            <a href="./index.html">Español</a>
+          </div>
         </div>
       </div>
       <div class="heroContent">
