desktop language switch

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <a href="#dienste">servicios</a>
           <a href="#about">sobre mí</a>
           <a href="#contact">contacto</a>
-          <a href="" id="languageBtn"
+          <a id="languageBtn"
             ><img
               class="languageChange"
               src="./assets/translation.svg"
@@ -77,6 +77,13 @@
           </div>
         </div>
       </div>
+
+      <div class="desktopLanguage">
+          <a href="./deutsch.html">Deutsch</a>
+          <a href="./english.html">English</a>
+          <a href="./index.html">Español</a>
+      </div>
+
       <div class="heroContent">
         <div><span class="slogan" id="typed"></span></div>
         <h2 class="heroTitle">Intérprete y Traductora</h2>
