--- a/english.html
+++ b/english.html
@@ -55,7 +55,7 @@
           <a href="#dienste">Services</a>
           <a href="#about">About me</a>
           <a href="#contact">Contact</a>
-          <a href="" id="languageBtn"
+          <a  id="languageBtn"
             ><img
               class="languageChange"
               src="./assets/translation.svg"
@@ -78,6 +78,12 @@
           </div>
         </div>
       </div>
+
+      <div class="desktopLanguage">
+            <a href="./deutsch.html">Deutsch</a>
+            <a href="./english.html">English</a>
+            <a href="./index.html">Español</a>
+        </div>
 
       <div class="heroContent">
         <div><span class="slogan" id="typed"></span></div>
